--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -2,7 +2,7 @@ name: Deploy Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [feature/challenge]
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
