--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,26 @@ override.tf.json
 .terraformrc
 terraform.rc
 .vscode
+
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.idea
+.env
